Pichons Grill - Sistemas de Informacion I/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\javafx-base-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-base-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-controls-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-controls-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-fxml-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-graphics-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-graphics-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-media-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-media-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-swing-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-web-20.0.1-win.jar;C:\Program Files\BlueJ\lib\junit-4.12.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\opentest4j-1.2.0.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\javafx.web.jar;C:\Users\Skar\Downloads\Voz2 (2)\Voz2\cgjsapi.jar;C:\Program Files\BlueJ\lib\userlib\byte-buddy-1.12.16.jar;C:\Program Files\BlueJ\lib\userlib\byte-buddy-agent-1.12.16.jar;C:\Program Files\BlueJ\lib\userlib\jlatexmath-1.0.7.jar;C:\Program Files\BlueJ\lib\userlib\jlatexmath-font-cyrillic-1.0.7.jar;C:\Program Files\BlueJ\lib\userlib\jlatexmath-font-greek-1.0.7.jar;C:\Program Files\BlueJ\lib\userlib\mockito-all-1.10.19.jar;C:\Program Files\BlueJ\lib\userlib\mockito-core-5.7.0.jar;C:\Program Files\BlueJ\lib\userlib\mockito-junit-jupiter-4.9.0.jar;C:\Program Files\BlueJ\lib\userlib\objenesis-3.3.jar;C:\Users\Skar\Documents\GitHub\Pichons-Grill\Pichons Grill - Sistemas de Informacion I
-d
C:\Users\Skar\Documents\GitHub\Pichons-Grill\Pichons Grill - Sistemas de Informacion I\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Skar\Documents\GitHub\Pichons-Grill\Pichons Grill - Sistemas de Informacion I\Cliente.java
<---- end of javadoc command ---->
Loading source file C:\Users\Skar\Documents\GitHub\Pichons-Grill\Pichons Grill - Sistemas de Informacion I\Cliente.java...
Constructing Javadoc information...
C:\Users\Skar\Documents\GitHub\Pichons-Grill\Pichons Grill - Sistemas de Informacion I\Cliente.java:3: error: package Exception does not exist
import Exception.BadRequestException;
                ^
C:\Users\Skar\Documents\GitHub\Pichons-Grill\Pichons Grill - Sistemas de Informacion I\Cliente.java:271: error: cannot find symbol
    public String cancelarPedido() throws BadRequestException{
                                          ^
  symbol:   class BadRequestException
  location: class Cliente
2 errors
